--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,6 +1,10 @@
+.hidden{
+    display: none;
+}
+
 .navbar-fixed-left {
     width: 178px;
-    position: fixed;
+    position:fixed;
     border-radius: 0;
     height: 100%;
     background-color:
@@ -8,6 +12,7 @@
     margin: 0;
     padding: none;
     display: flex;
+    justify-content: center;
 }
 
 .home-and-profile {
@@ -16,6 +21,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 0;
 }
 
 .home-link {
@@ -24,11 +30,6 @@
     font-size: 20px;
 }
 
-.profile-dropdown{
-    
-    justify-content: center;
-    
-}
 
 .home-profile-main-div{
     display: flex;
@@ -37,7 +38,24 @@
     justify-content: center;
 }
 
-.profile-button{
-    justify-content: center;
+.list-profile-dropdown {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
     align-items: center;
+    background-color: #FFF;
+    top: 28rem;
+    right: -201px;
+    box-shadow: 0px 0px 14px 0.5px rgba(221, 221, 221, 0.7);
+    border-radius: 15px;
+    padding: 15px 0px;
+    list-style: none;
+    width: 200px;
+    overflow: hidden;
+    height: 6em;
+}
+
+
+.profile-btn {
+    position: relative;
 }
