Added Notes functionality

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,3 +3,10 @@
 body {
     margin: 0px;
 }
+
+
+.buttonToLooseProperties {
+    /* { all: 'unset', cursor: 'pointer', color: 'white' } */
+    all: unset;
+    cursor: pointer;
+}
